--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -227,6 +227,7 @@ fr:
   enterprises: Entreprises
   enterprise_groups: Groupes
   reports: Rapports
+  listing_reports: Liste des rapports
   variant_overrides: Catalogue boutique
   import: Importer
   spree_products: Produits
@@ -722,6 +723,8 @@ fr:
           enable_subscriptions_tip: "Activer la fonction abonnements?"
           enable_subscriptions_false: "Désactivé"
           enable_subscriptions_true: "Activé"
+          customer_names_in_reports: "Affichage du nom des acheteurs"
+          customer_names_tip: "Permettre aux producteurs de voir les noms de vos acheteurs"
           customer_names_false: "Désactivé"
           customer_names_true: "Activé"
           shopfront_message: "Message d'accueil"
@@ -3269,6 +3272,8 @@ fr:
           bulk_coop_allocation: 'Achats groupés - Allocation'
           bulk_coop_packing_sheets: 'Achats groupés - Feuilles de préparation des paniers'
           bulk_coop_customer_payments: 'Achats groupés - Paiement des acheteurs'
+        customer_names_message:
+          customer_names_tip: "Si les noms des acheteurs sont masqué, vous pouvez contacter le gestionnaire de la boutique. Il pourra vous donner accès à cette information."
       users:
         index:
           listing_users: "Liste des utilisateurs"
