--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3652,3 +3652,4 @@ See the %{link} to find out more about %{sitename}'s features and to start using
       models:
         spree/payment:
           one: Payment
+          other: Payments
