--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2769,9 +2769,9 @@ See the %{link} to find out more about %{sitename}'s features and to start using
       action_login: "Log in now."
     stripe_elements:
       unknown_error_from_stripe: |
-        Uh oh, the Stripe integration failed. You can try again but there is
-        a very small chance that the payment came through already. It's best to
-        check your bank account first.
+        There was a problem setting up your card in our payments gateway.
+        Please refresh the page and try again, if it fails a second time,
+        please contact us for support.
 
   # Singular and plural forms of commonly used words.
   # We use these entries to pluralize unit names in every language.
