--- a/config/locales/en_BE.yml
+++ b/config/locales/en_BE.yml
@@ -2779,6 +2779,11 @@ en_BE:
     weight: Weight (per kg)
     actions:
       update: "Update"
+    shared:
+      payments_list:
+        amount: "Amount"
+        payment_method: "Payment Method"
+        payment_state: "Payment State"
     errors:
       messages:
         blank: "can't be blank"
