--- a/config/locales/en_IE.yml
+++ b/config/locales/en_IE.yml
@@ -2976,6 +2976,10 @@ en_IE:
           one: "1 error prohibited this record from being saved:"
           other: "%{count} errors prohibited this record from being saved:"
         there_were_problems_with_the_following_fields: "There were problems with the following fields"
+      payments_list:
+        amount: "Amount"
+        payment_method: "Payment Method"
+        payment_state: "Payment County"
     errors:
       messages:
         blank: "can't be blank"
