--- a/config/locales/en_PH.yml
+++ b/config/locales/en_PH.yml
@@ -2920,6 +2920,11 @@ en_PH:
     options: "Options"
     actions:
       update: "Update"
+    shared:
+      payments_list:
+        amount: "Amount"
+        payment_method: "Payment Method"
+        payment_state: "Payment State"
     errors:
       messages:
         blank: "can't be blank"
