--- a/config/locales/en_US.yml
+++ b/config/locales/en_US.yml
@@ -2973,6 +2973,10 @@ en_US:
           one: "1 error prohibited this record from being saved:"
           other: "%{count} errors prohibited this record from being saved:"
         there_were_problems_with_the_following_fields: "There were problems with the following fields"
+      payments_list:
+        amount: "Amount"
+        payment_method: "Payment Method"
+        payment_state: "Payment State"
     errors:
       messages:
         blank: "can't be blank"
