--- a/config/locales/en_ZA.yml
+++ b/config/locales/en_ZA.yml
@@ -2854,6 +2854,11 @@ en_ZA:
     error_user_destroy_with_orders: "Users with completed orders may not be deleted"
     actions:
       update: "Update"
+    shared:
+      payments_list:
+        amount: "Amount"
+        payment_method: "Payment Method"
+        payment_state: "Payment State"
     errors:
       messages:
         blank: "can't be blank"
