--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -2968,6 +2968,10 @@ it:
           one: "1 errore ha proibito il salvataggio di questo record:"
           other: "%{count} errori hanno proibito il salvataggio di questo record:"
         there_were_problems_with_the_following_fields: "Si sono verificati problemi con i seguenti campi"
+      payments_list:
+        amount: "Quantità"
+        payment_method: "Metodo di pagamento"
+        payment_state: "Stato Pagamento"
     errors:
       messages:
         blank: "non può essere lasciato vuoto"
