--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3181,6 +3181,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
     has_no_shipped_units: "has no shipped units"
     successfully_created: ! '%{resource} has been successfully created!'
     successfully_updated: ! '%{resource} has been successfully updated!'
+    payment_method: "Payment Method"
     payment_processing_failed: "Payment could not be processed, please check the details you entered"
     not_available: "N/A"
     order_populator:
