Fix datetime picker translations on Order cycles screen So the thing is we initialize jQuery plugin on `admin/util.js.erb` but then we override those defaults on order_cycles.js.erb.coffe. Now both plugin initializations use the same defaults. Also added 3 missing translations for `Done`, `Now` and `Time` copies on that timepicker popover

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -145,6 +145,10 @@ en:
       not_array_error: "must be an array"
       invalid_element_error: "must contain only valid integers"
 
+  datetime_picker_ui:
+    current_text: Now
+    close_text: Done
+    time_text: Time
   enterprise_mailer:
     confirmation_instructions:
       subject: "Please confirm the email address for %{enterprise}"
