--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3127,6 +3127,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
     inventory: Inventory
     zipcode: Postcode
     weight: Weight (per kg)
+    weight_lb: Weight (per lb)
     error_user_destroy_with_orders: "Users with completed orders may not be deleted"
     cannot_create_payment_without_payment_methods: "You cannot create a payment for an order without any payment methods defined."
     please_define_payment_methods: "Please define some payment methods first."
