add preferred_unit to weight shipping calculator

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3126,7 +3126,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
     inventory_error_flash_for_insufficient_quantity: "An item in your cart has become unavailable."
     inventory: Inventory
     zipcode: Postcode
-    weight: Weight (per kg)
+    weight: Weight (per kg or lb)
     error_user_destroy_with_orders: "Users with completed orders may not be deleted"
     cannot_create_payment_without_payment_methods: "You cannot create a payment for an order without any payment methods defined."
     please_define_payment_methods: "Please define some payment methods first."
